<resources>
    <string name="app_name">Pebble</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up">Or, Sign-Up</string>
    <string name="or_login">Or, Login</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
</resources>