<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    tools:context=".activities.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/pebbleTextView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/white_edit_text"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColorHint="@color/pastel_blue"
            android:fontFamily="casual"
            android:textColor="@color/pastel_blue"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/pebbleTextView"
            app:layout_constraintBottom_toTopOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_edit_text"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColorHint="@color/pastel_blue"
            android:fontFamily="casual"
            android:textColor="@color/pastel_blue"
            android:textAlignment="center"
            android:textSize="30sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintBottom_toTopOf="@id/authButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/authButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/white_round_button"
            android:text="@string/sign_up"
            android:textColor="@color/pastel_blue"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/authTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/authButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>